--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dircolors"]
 	path = dircolors
 	url = https://github.com/seebi/dircolors-solarized
+[submodule "vim"]
+	path = vim
+	url = https://github.com/altercation/vim-colors-solarized.git
